--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
 @import './css/matrix-style.css';
 @import './css/matrix-media.css';
 @import './css/matrix-login.css';
+@import './css/colorpicker.css';
